--- a/ShibugakiViewer/packages.config
+++ b/ShibugakiViewer/packages.config
@@ -1,21 +1,28 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="EntityFramework" version="6.1.3" targetFramework="net462" />
-  <package id="ReactiveProperty" version="3.6.0" targetFramework="net462" />
-  <package id="RestoreWindowPlace" version="1.4.0.0" targetFramework="net462" />
-  <package id="System.Data.SQLite" version="1.0.105.2" targetFramework="net462" />
-  <package id="System.Data.SQLite.Core" version="1.0.105.2" targetFramework="net462" />
-  <package id="System.Data.SQLite.EF6" version="1.0.105.2" targetFramework="net462" />
-  <package id="System.Data.SQLite.Linq" version="1.0.105.2" targetFramework="net462" />
+  <package id="EntityFramework" version="6.2.0" targetFramework="net462" />
+  <package id="ReactiveProperty" version="5.0.0" targetFramework="net462" />
+  <package id="RestoreWindowPlace" version="1.5.0.0" targetFramework="net462" />
+  <package id="System.Collections" version="4.3.0" targetFramework="net462" />
+  <package id="System.ComponentModel.Annotations" version="4.5.0" targetFramework="net462" />
+  <package id="System.Data.SQLite" version="1.0.108.0" targetFramework="net462" />
+  <package id="System.Data.SQLite.Core" version="1.0.108.0" targetFramework="net462" />
+  <package id="System.Data.SQLite.EF6" version="1.0.108.0" targetFramework="net462" />
+  <package id="System.Data.SQLite.Linq" version="1.0.108.0" targetFramework="net462" />
   <package id="System.Interactive" version="3.1.1" targetFramework="net462" />
-  <package id="System.Reactive" version="3.1.1" targetFramework="net462" />
-  <package id="System.Reactive.Core" version="3.1.1" targetFramework="net462" />
-  <package id="System.Reactive.Interfaces" version="3.1.1" targetFramework="net462" />
-  <package id="System.Reactive.Linq" version="3.1.1" targetFramework="net462" />
-  <package id="System.Reactive.PlatformServices" version="3.1.1" targetFramework="net462" />
-  <package id="System.Reactive.Windows.Threading" version="3.1.1" targetFramework="net462" />
-  <package id="System.Threading.Tasks.Extensions" version="4.3.0" targetFramework="net462" />
+  <package id="System.ObjectModel" version="4.3.0" targetFramework="net462" />
+  <package id="System.Reactive" version="4.0.0" targetFramework="net462" />
+  <package id="System.Reactive.Core" version="4.0.0" targetFramework="net462" />
+  <package id="System.Reactive.Interfaces" version="4.0.0" targetFramework="net462" />
+  <package id="System.Reactive.Linq" version="4.0.0" targetFramework="net462" />
+  <package id="System.Reactive.PlatformServices" version="4.0.0" targetFramework="net462" />
+  <package id="System.Reactive.Windows.Threading" version="4.0.0" targetFramework="net462" />
+  <package id="System.Reflection" version="4.3.0" targetFramework="net462" />
+  <package id="System.Reflection.Extensions" version="4.3.0" targetFramework="net462" />
+  <package id="System.Runtime" version="4.3.0" targetFramework="net462" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.0" targetFramework="net462" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.0" targetFramework="net462" />
   <package id="WindowsAPICodePack-Core" version="1.1.2" targetFramework="net462" />
   <package id="WindowsAPICodePack-Shell" version="1.1.1" targetFramework="net462" />
-  <package id="XamlAnimatedGif" version="1.1.9" targetFramework="net462" />
+  <package id="XamlAnimatedGif" version="1.1.10" targetFramework="net462" />
 </packages>
