--- a/ImageLibrary/ImageLibrary.csproj
+++ b/ImageLibrary/ImageLibrary.csproj
@@ -31,6 +31,7 @@
     <PackageReference Include="System.Data.SQLite.Core" Version="1.0.111" />
     <PackageReference Include="System.Dynamic.Runtime" Version="4.3.0" />
     <PackageReference Include="System.Interactive" Version="4.0.0" />
+    <PackageReference Include="System.Reactive" Version="4.2.0" />
   </ItemGroup>
 
   <ItemGroup>
