--- a/ShibugakiViewer.Launcher/ShibugakiViewer.Launcher.csproj
+++ b/ShibugakiViewer.Launcher/ShibugakiViewer.Launcher.csproj
@@ -2,12 +2,12 @@
 
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
     <ApplicationIcon>appicon.ico</ApplicationIcon>
     <StartupObject />
     <Description>Image Database</Description>
     <PackageId>ShibugakiViewer</PackageId>
-    <Version>2.0.0</Version>
+    <Version>2.1.0</Version>
     <Authors>Boredbone</Authors>
     <Product>ShibugakiViewer</Product>
     <Copyright>Boredbone 2019</Copyright>
