--- a/ImageLibrary/ImageLibrary.csproj
+++ b/ImageLibrary/ImageLibrary.csproj
@@ -31,6 +31,7 @@
     <PackageReference Include="System.Data.SQLite.Core" Version="1.0.117" />
     <PackageReference Include="System.Dynamic.Runtime" Version="4.3.0" />
     <PackageReference Include="System.Interactive" Version="6.0.1" />
+    <PackageReference Include="System.IO.Hashing" Version="8.0.0-preview.3.23174.8" />
     <PackageReference Include="System.Reactive" Version="5.0.0" />
   </ItemGroup>
 
