--- a/ShibugakiViewer.Launcher.Net45/ShibugakiViewer.Launcher.Net45.csproj
+++ b/ShibugakiViewer.Launcher.Net45/ShibugakiViewer.Launcher.Net45.csproj
@@ -8,9 +8,10 @@
     <OutputType>WinExe</OutputType>
     <RootNamespace>ShibugakiViewer.Launcher.Net45</RootNamespace>
     <AssemblyName>ShibugakiViewer.Launcher.Net45</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
